--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
   </a>
   <a href="https://github.com/parragajp/JPthehulk" target="_blank">
     <img rc="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.xPjeXkXbzEPfRtZpY5DQAgAAAA%26pid%3DApi&f=1" alt="Github icon"
+    width = 200 height = 200
   /></a>
   <a href="www.linkedin.com/in/j-p-parraga-7a96a6151" target="_blank">
     <img
       src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.WcicDul8_c4tfHIjBfRuUwHaE9%26pid%3DApi&f=1"
-      alt="linkden icon"
+      alt="linkden icon" width = 200 height = 200
   /></a>
 
   
