Changed fonts and css files for index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   
   <link rel="shortcut icon" href="https://cdn.glitch.com/21a1ba89-7b64-4909-8d03-d256b98529a2%2FWhitewater%20Rafting%20Vacations.png?v=1602749290209" type="image/x-icon">
+  <link href='https://fonts.googleapis.com/css?family=Dekko' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
 
     <title>Whitewater Rafting Vacations | Home</title>
     <meta charset="utf-8">
