updated personal site plane

--- a/personalsiteplan.html
+++ b/personalsiteplan.html
@@ -214,7 +214,38 @@
         <li><img src="images/exampleblogpost.png" alt="image for page3" height="200" ></li>
 
       </ul>
+
+      <h3>Main Topics</h3>
+      <p>Here I'll go into a little more detail about each page on my website:</p>
+      <p></p>
+      <h4>Home Page</h4>
+      <p>On my home page is going to be one page. I'm going to set it up in a way that as the person viewing the webpage will feel like 
+       they're on a journey. The purpose of this page is to communicate across a high level overview of what a company can do with data.
+       I think first of what needs to be addressed is what are their intentions with data. Then I'll explain in theory what can be 
+       accomplished and how we're going to be able to accomplish it. I'm going to explain that depending on their needs how long their
+       project is going to take. I will also set up links to pages going more in detail about theory, implementation, and integration with
+       what they are already using. My hopes is that I can communicate that no matter where you are in the path of data that anything can be
+       accomplished. If you are just totally new to data but you've heard about it and studied a little bit we can still provide a service.
+       If someone has already built the infrastructure then those people will probably need to go into custom built machine learning models. There
+       are probably two levels of experiencne in this industry. Both level share the desire of applying data but one level is proably totally
+       new and has no idea how to set up the infrastructure and the other level most likely already has built the infrastructure but still needs
+       help in terms how to take it further with the application of data, perhaps through data mining and predictive analytics.
+      </p>
+
+      <h4>My Blog</h4>
+      <p>The main topic of this child webpage is what I've been learning while I'm working. It will include main topics in data science
+        for example: exploring data, data analysis, mathematical concepts, statistical concepts, business intelligence, data visualization,
+        probability, regression, time series, classfication, forcasting, problem definiton, data preparation, modeling, and deployment. 
+      </p>
+
+      <h4>Machine Learning API</h4>
+      <p>This page mostly will be a fun interactive page where you can try out simple predictions. It might give a little bit information
+        on how it's working on the backend but it's mostly just to see how fast on the website can predict certain things.
+      </p>
     
+
+
+
     </main>
   </body>
 
