--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="myblog.html">Blog</a></li>
                 <li><a href="aboutme.html">About Me</a></li>
                 <li><a href="site-plan.html">Site Plan</a></li>
             </ul>
