update personal site plan

--- a/personalsiteplan.html
+++ b/personalsiteplan.html
@@ -242,6 +242,21 @@
       <p>This page mostly will be a fun interactive page where you can try out simple predictions. It might give a little bit information
         on how it's working on the backend but it's mostly just to see how fast on the website can predict certain things.
       </p>
+      <h3>Wireframes</h3>
+      <h4>Home Page Wireframe</h4>
+
+      <li><img src="images/homewireframe.png" alt="home wireframe" ></li>
+
+      <h4>ML API Wireframe</h4>
+      <p>This is the form where people can try out a Machine Learning Prediction</p>
+      
+      <img src="images/mlapiwireframe.png" alt="api wireframe">
+
+      <h4>Blog Wireframe</h4>
+
+      <li><img src="images/blogwireframe.png" alt="blog wireframe" ></li>
+
+
     
 
 
