added child pages to raft site

--- a/contact-us.html
+++ b/contact-us.html
@@ -15,7 +15,7 @@
     
     <header>
         <div class="logo-box">
-          <a href="index.html"> <img src="https://cdn.glitch.com/21a1ba89-7b64-4909-8d03-d256b98529a2%2FWhitewater%20Rafting%20Vacations.png?v=1604386130609" alt="Whitewater Rafting vacations Logo"> </a>
+          <a href="index.html"> <img src="https://previews.123rf.com/images/bokononist/bokononist1110/bokononist111000120/10889233-river-rafting.jpg" alt="White Water Rafting Logo" width="200" height="200"> </a>
           </div>
       
       <nav>
@@ -23,7 +23,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutme.html">About Me</a></li>
                 <li><a href="site-plan.html">Site Plan</a></li>
-              <li><a href="rivers.html">Rivers</a></li>
+              <li><a href="rivers.html">River Destinations</a></li>
               <li><a href="contact-us.html">Contact Us</a></li>
             </ul>
         </nav>
