--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutme.html">About Me</a></li>
                 <li><a href="site-plan.html">Site Plan</a></li>
-                <li><a href="#">River Destinations</a></li>
-              <!--<li><a href="contact-us.html">Contact Us</a></li>-->
+                <li><a href="rivers.html">River Destinations</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
