added my website html

--- a/myblog.html
+++ b/myblog.html
@@ -28,7 +28,7 @@
                 <li><a href="myblog.html">Home</a></li>
                 <li><a href="aboutme.html">About Me</a></li>
                 <li><a href="#">ML API</a></li>
-              <li><a href="#">My Website</a></li>-->
+              <li><a href="dsa.html">My Website</a></li>-->
             </ul>
         </nav>
     </header>
@@ -184,6 +184,8 @@
       <a target="_blank" href="https://github.com/parragajp/JPthehulk"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" height="80"></a>
       
       <a target="_blank" href="https://www.linkedin.com/in/j-p-parraga-7a96a6151/"><img src="https://cdn.pixabay.com/photo/2017/08/22/11/56/linked-in-2668696_960_720.png" alt="LinkedIn" height="80"></a>
+
+      <a target="_blank" href="personalsiteplan.html"><img src="images/homewireframe.png" alt="personalsiteplane" height="80"></a>
 
     </div>
   </footer>
