--- a/personalsiteplan.html
+++ b/personalsiteplan.html
@@ -106,9 +106,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav><ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Machine Learning API</a></li>
-        <li><a href="#">My Blog</a></li>
+        <li><a href="dsa.html">Home</a></li>
+        <li><a href="https://parragajp.shinyapps.io/HousePredictionShinyApp/">Machine Learning API</a></li>
+        <li><a href="myblog.html">My Blog</a></li>
         </ul></nav>
       <hr>
       <h2>
