--- a/myblog.html
+++ b/myblog.html
@@ -27,7 +27,7 @@
             <ul>
                 <li><a href="myblog.html">Home</a></li>
                 <li><a href="aboutme.html">About Me</a></li>
-                <li><a href="#">ML API</a></li>
+                <li><a href="https://parragajp.shinyapps.io/HousePredictionShinyApp/">ML API</a></li>
               <li><a href="dsa.html">My Website</a></li>-->
             </ul>
         </nav>
