finished docker blog

--- a/blogdocker.html
+++ b/blogdocker.html
@@ -101,6 +101,18 @@
 
       <h2>What is GCloud?</h2>
 
+      <p>
+        Gcloud is a place that you can develop new apps with a fast process. You can scale you're organization with these services.
+        It is also a place that you can protect your data. Big companies like Nintendo, PayPal, Spotifiy, AT&T, and well known
+        IV League Universities use these services. Some big things that Gcloud will do is modernize cloud infrastructure so for
+        example Kubernates, VMware Instances, huge servers, containers, and pipelines.
+      </p>
+
+      <p>
+        In my case I used a cheap way of deploying a SQL Server through a Docker Container. It was given an IP Address to connect to the container
+        and then with some Firewall Port rules it can connect to the database.
+      </p>
+
     </main>
   </body>
 
