--- a/tiktoklinks.html
+++ b/tiktoklinks.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Site Plan</title>
+    <title>TikTok Website</title>
     <link type="text/css" rel="stylesheet" href="site-plan.css">
   </head>
 
